<resources>
    <string name="app_name">Gà Rán BCL</string>
    <string name="package_name" translatable="false">vn.bcl.garanbcl</string>

    <string name="facebook_app_id">220513355524480</string>
    <string name="fb_login_protocol_scheme">fb220513355524480</string>
    <string name="title_activity_login">Đăng nhập</string>

    <string name="noconnection">Hãy kết nối Wifi hoặc mạng di động để tiếp tục...</string>
    <string name="connection_not_found">Chưa kết nối</string>
    <string name="cannot_connect">Không thể tìm thấy mạng</string>
    <string name="connect_now">Cài đặt</string>
    <string name="quit_app">Thoát</string>

    <string name="new_user">Chưa có tài khoản?</string>
    <string name="sign_up_now">Đăng ký ngay</string>
    <string name="old_user">Đã có tài khoản?</string>
    <string name="log_in_now">Đăng nhập ngay</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Họ tên</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="prompt_repassword">Nhập lại mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_sign_up">Đăng ký</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="action_sign_up_short">Đăng ký</string>
    <string name="error_invalid_email">Email không hợp lệ</string>
    <string name="error_invalid_name">Tên không hợp lệ</string>
    <string name="error_invalid_password">Mật khẩu không hợp lệ</string>
    <string name="error_short_password">Mật khẩu phải từ 6-20 kí tự</string>
    <string name="error_incorrect_password">Mật khẩu sai</string>
    <string name="error_repassword">Xác nhận mật khẩu chưa đúng</string>
    <string name="error_field_required">Đây là trường bắt buộc</string>
    <string name="permission_rationale">"Cần quyền truy cập vào Danh bạ để gợi ý Email</string>
    <string name="login_title">ĐĂNG NHẬP</string>
    <string name="login_desc">Đăng nhập để tiếp tục</string>
    <string name="login_forgot">Quên mật khẩu?</string>
    <string name="sign_in_facebook">Đăng nhập với Facebook</string>
    <string name="sign_in_google">Đăng nhập với Google</string>
    <string name="loading_holder">Xin hãy đợi...</string>
    <string name="logging_holder">Đang đăng nhập...</string>
    <string name="getting_data">Lấy thông tin</string>
    <string name="password_mismatch">Thông tin chưa khớp</string>
    <string name="login_failed">Đăng nhập thất bại</string>
    <string name="login_failed_desc">Mật khẩu hoặc Email không đúng</string>

    <string name="logout_confirm">Đăng xuất</string>
    <string name="logout_question">Bạn thật sự muốn đăng xuất khỏi ứng dụng?</string>
    <string name="logout_ok">Xác nhận</string>
    <string name="logout_succeeded">Đăng xuất thành công!</string>
    <string name="logout_cancel">Hủy</string>

    <string name="quit_confirm">Đóng ứng dụng</string>
    <string name="quit_question">Bạn thật sự muốn thoát ứng dụng?</string>
    <string name="quit_ok">Đóng</string>
    <string name="quit_cancel">Hủy</string>

    <string name="signup_title">ĐĂNG KÝ</string>
    <string name="signup_desc">Đăng ký một tài khoản mới</string>

    <string name="no_user">=========</string>
    <string name="user_not_found">Chưa đăng nhập</string>
    <string name="please_login">Bạn cần phải đăng nhập để truy cập vào trang này</string>
    <string name="close_login_failed">Đóng</string>
    <string name="login_now">Đăng nhập ngay</string>

    <string name="nav_home">Trang chủ</string>
    <string name="nav_menu">Thực đơn</string>
    <string name="nav_cart">Giỏ hàng</string>
    <string name="nav_news">Tin tức</string>
    <string name="nav_account">Tài khoản</string>
    <string name="nav_help">Trợ giúp</string>
    <string name="nav_terms">Điều khoản sử dụng</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="nav_exit">Thoát</string>

    <string name="prompt_search">Nhập vào tên sản phẩm</string>

    <string name="item_multiply">*</string>
    <string name="item_equal">=</string>
    <string name="item_back">Đóng</string>
    <string name="item_add_to_cart">Thêm vào giỏ</string>
    <string name="item_add_to_cart_desc">Thêm sản phẩm này vào giỏ?</string>
    <string name="item_add_to_cart_now">Thêm</string>
    <string name="item_add_to_cart_cancel">Hủy</string>

    <string name="cart_sum">Tổng tiền:</string>
    <string name="cart_discount">KM(10%):</string>
    <string name="cart_total">Tổng thanh toán:</string>
    <string name="cart_checkout">ĐẶT HÀNG NGAY</string>

    <string name="checkout_confirm">ĐẶT HÀNG</string>
    <string name="ord_total">Tổng hóa đơn:</string>
    <string name="checkout_title">Xác nhận đơn hàng</string>

    <string name="popular">🔥 Gợi ý sản phẩm</string>

    <string name="currency">VNĐ</string>
    <string name="nav_login_btn">Đăng nhập</string>
    <string name="nav_name">🍗 GÀ RÁN BCL</string>
    <string name="nav_slogan">Thương hiệu gà rán số 1 Việt Nam</string>
    <string name="nav_phone">📞 1 9 0 0 9 0 9 9</string>
    <string name="nav_mail">📧 customer@bcl.com</string>

    <string name="empty_address">Nhấp vào đây để chọn địa chỉ</string>
    <string name="title_activity_address">AddressActivity</string>
    <string name="save">Lưu</string>
    <string name="change_info">Tài khoản</string>
    <string name="prompt_phone">Điện thoại</string>

</resources>
