<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".LoginActivity">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:background="@null">

                <ImageView
                    android:id="@+id/login_logo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/logo"
                    android:scaleType="center" />

                <customfonts.MyTextView_Roboto_Bold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6.8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:shadowColor="@color/black"
                    android:shadowDx="1"
                    android:shadowDy="2"
                    android:shadowRadius="3"
                    android:text="@string/login_title"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:letterSpacing="0.0325"
                    android:text="@string/login_desc"
                    android:textColor="@color/com_smart_login_code"
                    android:textSize="13sp" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <customfonts.EditText_Roboto_Medium
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingBottom="20dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:textColor="#212224"
                        android:textColorHint="#868e96"
                        android:textSize="12sp" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <customfonts.EditText_Roboto_Medium
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:paddingBottom="20dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:textColor="#212224"
                        android:textColorHint="#868e96"
                        android:textSize="12sp" />

                </android.support.design.widget.TextInputLayout>


                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10.4dp"
                    android:gravity="right"
                    android:text="@string/login_forgot"
                    android:textColor="#2050d5"
                    android:textSize="12.5sp" />


                <customfonts.MyTextView_Roboto_Bold
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="64.67dp"
                    android:layout_marginRight="64.67dp"
                    android:background="@drawable/register_rect"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/action_sign_in"
                    android:textColor="#fbfbfb"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/fb_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/fb_login_button_bg"
                    android:drawableLeft="@drawable/ic_facebook_white_36dp"
                    android:drawableStart="@drawable/ic_facebook_white_36dp"
                    android:paddingStart="30dp"
                    android:tag="facebook_login_button"
                    android:text="@string/sign_in_facebook"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/google_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/google_login_button_bg"
                    android:drawableLeft="@drawable/ic_google_plus_white_36dp"
                    android:drawableStart="@drawable/ic_google_plus_white_36dp"
                    android:paddingStart="30dp"
                    android:tag="google_login_button"
                    android:text="@string/sign_in_google"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <customfonts.MyTextView_Roboto_Medium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/new_user"
                        android:textColor="#212224" />


                    <customfonts.MyTextView_Roboto_Medium
                        android:id="@+id/signup_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/sign_up_now"
                        android:layout_marginLeft="15dp"
                        android:textColor="#2050d5" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</RelativeLayout>