<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".LoginActivity">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/signup_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/login_logo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/logo"
                    android:scaleType="center" />

                <customfonts.MyTextView_Roboto_Bold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6.8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:shadowColor="@color/black"
                    android:shadowDx="1"
                    android:shadowDy="2"
                    android:shadowRadius="3"
                    android:text="@string/signup_title"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:letterSpacing="0.0325"
                    android:text="@string/signup_desc"
                    android:textColor="@color/com_smart_login_code"
                    android:textSize="13sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <customfonts.EditText_Roboto_Medium
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:hint="@string/prompt_name"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:paddingBottom="20dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:textColor="#212224"
                        android:textColorHint="#868e96"
                        android:textSize="12sp" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <customfonts.EditText_Roboto_Medium
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:paddingBottom="20dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:textColor="#212224"
                        android:textColorHint="#868e96"
                        android:textSize="12sp" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <customfonts.EditText_Roboto_Medium
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:paddingBottom="20dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:textColor="#212224"
                        android:textColorHint="#868e96"
                        android:textSize="12sp" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <customfonts.EditText_Roboto_Medium
                        android:id="@+id/repassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:hint="@string/prompt_repassword"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_up_short"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:paddingBottom="20dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:textColor="#212224"
                        android:textColorHint="#868e96"
                        android:textSize="12sp" />

                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical">


                    <customfonts.MyTextView_Roboto_Bold
                        android:id="@+id/email_sign_up_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="64.67dp"
                        android:layout_marginRight="64.67dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/register_rect"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/action_sign_up"
                        android:textColor="#fbfbfb"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <customfonts.MyTextView_Roboto_Medium
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/old_user"
                            android:textColor="#212224" />


                        <customfonts.MyTextView_Roboto_Medium
                            android:id="@+id/login_now"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:gravity="center"
                            android:text="@string/login_now"
                            android:textColor="#2050d5" />

                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</RelativeLayout>